# open-source-playground

./: README.md  main.py  pyproject.toml
instructor/: context.md  ex-1.1.py  ex-1.py
